Fixes text wrapping on phone number, header

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -276,6 +276,7 @@ body {
 .desktop-phone, .mobile-phone {
     .widget {
         &.clicktocall {
+        	white-space: nowrap;
             text-align: center;
             margin-top: 0.9em;
             @media @mobile {
